--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<div>
-  <h2 [title]="center.name">{{center.name}}</h2>
-  <div>{{center.address}}
-    <span>{{center.postalCode}} {{center.city}}</span>
-  </div>
-
-</div>
+<router-outlet></router-outlet>
