--- a/src/app/vaccination-center/vaccination-center.component.html
+++ b/src/app/vaccination-center/vaccination-center.component.html
@@ -1,1 +1,29 @@
-<p>vaccination-center works!</p>
+<div class="box">
+  <h1 class="title is-3">Liste des centres de vaccination</h1>
+</div>
+
+<div class="columns is-multiline">
+  <div class="column is-half is-one-quarter-desktop">
+    <div class="card">
+      <div class="card-image">
+        <figure class="image is-4by3">
+          <img
+            src="/assets/placeholder_card.png"
+            alt="Placeholder image"
+          />
+        </figure>
+      </div>
+      <div class="card-content">
+        <p class="title is-5">Centre n°{{ center.id }} | {{ center.name }}</p>
+        <p class="subtitle is-6 mt-1">
+          Adresse : {{ center.address }}, {{ center.postalCode }}
+          {{ center.city }}
+        </p>
+      </div>  
+      <footer class="card-footer">
+        <a href="#" class="card-footer-item">Détails du centre</a>
+        <a href="#" class="card-footer-item">Rendez-vous</a>
+      </footer>
+    </div>
+  </div>
+</div>
