--- a/src/app/vaccination-center-list/vaccination-center-list.component.html
+++ b/src/app/vaccination-center-list/vaccination-center-list.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="columns is-multiline">
-    <div class="column is-half is-one-quarter-desktop" *ngFor="let center of centers">
+    <div class="column is-half is-one-quarter-desktop" *ngFor="let aCenter of centers" [ngClass]="selected==aCenter ? 'selected' : ''">
       <div class="card">
         <div class="card-image">
           <figure class="image is-4by3">
@@ -14,9 +14,10 @@
           </figure>
         </div>
         <div class="card-content">
-          <p class="title is-5"><a routerLink="/centers/detail/{{center.id}}">{{ center.name }}</a></p>
+          <p class="title is-5"><a (click)="selectCenter(aCenter)">{{ aCenter.name }}</a></p>
         </div>  
         <footer class="card-footer has-background-link">
+          <a class="card-footer-item has-text-light" routerLink="/centers/detail/{{ aCenter.id }}">Détails du centre</a>
           <a class="card-footer-item has-text-light">Prendre un rendez-vous</a>
         </footer>
       </div>
