--- a/src/app/vaccination-center/vaccination-center.component.html
+++ b/src/app/vaccination-center/vaccination-center.component.html
@@ -7,7 +7,7 @@
       {{ center.city | uppercase }}
     </p>
 
-    <button class="button is-danger is-light" (click)="delete({{ center.id }})">
+    <button class="button is-danger is-light" (click)="delete(center.id)">
       Supprimer le centre
     </button>
   </div>
