--- a/src/app/vaccination-center-list/vaccination-center-list.component.html
+++ b/src/app/vaccination-center-list/vaccination-center-list.component.html
@@ -17,7 +17,7 @@
           <p class="title is-5"><a (click)="selectCenter(aCenter)">{{ aCenter.name }}</a></p>
         </div>  
         <footer class="card-footer has-background-link">
-          <a class="card-footer-item has-text-light" routerLink="/centers/detail/{{ aCenter.id }}">Détails du centre</a>
+          <a class="card-footer-item has-text-light" routerLink="/center/detail/{{ aCenter.id }}">Détails du centre</a>
           <a class="card-footer-item has-text-light">Prendre un rendez-vous</a>
         </footer>
       </div>
