--- a/src/app/vaccination-center-list/vaccination-center-list.component.html
+++ b/src/app/vaccination-center-list/vaccination-center-list.component.html
@@ -1,5 +1,5 @@
 <div class="box">
-    <h1 class="title is-3">Liste des centres de vaccination</h1>
+    <p class="title is-5"><i class="mr-2 fa-solid fa-hospital"></i> Liste des centres de vaccination</p>
 </div>
 
 <div class="columns is-multiline">
