--- a/src/app/vaccination-center/vaccination-center.component.html
+++ b/src/app/vaccination-center/vaccination-center.component.html
@@ -1,8 +1,8 @@
-<div class="detail" *ngIf="center">
+<div class="detail mt-3" *ngIf="center">
   <div class="box">
-    <h1 class="title is-3">Centre n°{{ center.id }} | {{ center.name | uppercase }}</h1>
+    <h1 class="title is-5">Centre n°{{ center.id }} | {{ center.name | uppercase }}</h1>
 
-    <p class="subtitle is-4 mt-1">
+    <p class="subtitle is-5 mt-1">
       Adresse : {{ center.address }}, {{ center.postalCode }}
       {{ center.city | uppercase }}
     </p>
