--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,40 @@
 <div id="app">
-    <nav class="navbar navbar-expand navbar-dark bg-dark">
-      <a href="#" class="navbar-brand">Polydoctor</a>
-      <ul class="navbar-nav mr-auto" routerLinkActive="active">
-        <li class="nav-item">
-          <a href="/home" class="nav-link" routerLink="home">Home </a>
-        </li>
-        <li class="nav-item" *ngIf="showAdminBoard">
-          <a href="/admin" class="nav-link" routerLink="admin">Admin Board</a>
-        </li>
-        <li class="nav-item" *ngIf="showModeratorBoard">
-          <a href="/mod" class="nav-link" routerLink="mod">Moderator Board</a>
-        </li>
-        <li class="nav-item">
-          <a href="/user" class="nav-link" *ngIf="isLoggedIn" routerLink="user">User</a>
-        </li>
-      </ul>
-  
-      <ul class="navbar-nav ml-auto" *ngIf="!isLoggedIn">
-        <li class="nav-item">
-          <a href="/register" class="nav-link" routerLink="register">Sign Up</a>
-        </li>
-        <li class="nav-item">
-          <a href="/login" class="nav-link" routerLink="login">Login</a>
-        </li>
-      </ul>
-  
-      <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
-        <li class="nav-item">
-          <a href="/profile" class="nav-link" routerLink="profile">{{ username }}</a>
-        </li>
-        <li class="nav-item">
-          <a href class="nav-link" (click)="logout()">LogOut</a>
-        </li>
-      </ul>
-    </nav>
-  
-    <div class="container">
-      <router-outlet></router-outlet>
+  <nav class="navbar is-dark is-spaced is-fixed-top has-shadow" role="navigation" aria-label="main navigation">
+    <div class="navbar-menu" routerLinkActive="active">
+      <div class="navbar-start">
+        <a class="button is-primary mr-2" routerLink="home">
+          <i class="mr-2 fa-solid fa-house-chimney"></i> Accueil
+        </a>
+        <a class="navbar-item" routerLink="centers"><i class="mr-2 fa-solid fa-hospital"></i> Liste des centres</a>
+        <a class="navbar-item" routerLink="patients"><i class="mr-2 fa-solid fa-hospital-user"></i> Liste des patients</a>
+        <a class="navbar-item" *ngIf="showAdminBoard" routerLink="admin">Administration</a>
+        <a class="navbar-item" *ngIf="showSuperadminBoard" routerLink="superadmin">Administration</a>
+      </div>
     </div>
+    <div class="navbar-end">
+      <div class="navbar-item" *ngIf="!isLoggedIn">
+        <div class="buttons">
+          <a class="button is-link" routerLink="register">
+            <i class="mr-2 fa-solid fa-user-plus"></i> Créer mon compte
+          </a>
+          <a class="button is-link is-light" routerLink="login">
+            <i class="mr-2 fa-solid fa-right-to-bracket"></i> Connexion
+          </a>
+        </div>
+      </div>
+      <div class="navbar-item has-dropdown is-hoverable" *ngIf="isLoggedIn">
+        <a class="navbar-link"><i class="mr-2 fa-solid fa-user"></i> {{ username }}</a>
+        <div class="navbar-dropdown is-right">
+          <a class="navbar-item" routerLink="profile"><i class="mr-2 fa-solid fa-user-gear"></i> Mon compte</a>
+          <a class="navbar-item" routerLink="user"><i class="mr-2 fa-solid fa-map-location-dot"></i> Mon tableau de bord</a>
+          <hr class="navbar-divider">
+          <a class="navbar-item" (click)="logout()"><i class="mr-2 fa-solid fa-right-from-bracket"></i> Déconnexion</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container is-fluid mt-6">
+    <router-outlet></router-outlet>
   </div>
+</div>
