--- a/src/app/patient-list/patient-list.component.html
+++ b/src/app/patient-list/patient-list.component.html
@@ -1,5 +1,5 @@
 <div class="box">
-    <h1 class="title is-3">Liste des patients</h1>
+    <p class="title is-5"><i class="mr-2 fa-solid fa-hospital-user"></i> Liste des patients</p>
 </div>
 
 <div class="columns is-multiline">
