🐛 🔥 [remove unused files + fix display issues]

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
         </a>
         <a class="navbar-item" routerLink="centers"><i class="mr-2 fa-solid fa-hospital"></i> Liste des centres</a>
         <a class="navbar-item" routerLink="patients"><i class="mr-2 fa-solid fa-hospital-user"></i> Liste des patients</a>
-        <a class="navbar-item" *ngIf="showAdminBoard" routerLink="admin">Administration</a>
-        <a class="navbar-item" *ngIf="showSuperadminBoard" routerLink="superadmin">Administration</a>
+        <a class="navbar-item" *ngIf="showAdminBoard" routerLink="admin"><i class="mr-2 fa-solid fa-screwdriver-wrench"></i> Administration</a>
+        <a class="navbar-item" *ngIf="showSuperadminBoard" routerLink="superadmin"><i class="mr-2 fa-solid fa-screwdriver-wrench"></i> Administration</a>
       </div>
     </div>
     <div class="navbar-end">
