--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,10 +3,11 @@
 </div>
 
 <div class="box content" *ngIf="currentUser; else loggedOut">
-  <p class="title is-5">{{ currentUser.firstName }} {{ currentUser.lastName | uppercase }}
-  </p>
+  <p class="title is-5 is-spaced">{{ currentUser.firstName }} {{ currentUser.lastName | uppercase }}</p>
+  <p>Compte créé <span class="tag">{{ currentUser.createdOn | date: 'le dd/MM/yyyy, à HH:mm:ss' }}</span></p>
+  <p>Dernière modification du compte <span class="tag">{{ currentUser.lastModifiedOn | date: 'le dd/MM/yyyy, à HH:mm:ss' }}</span></p>
 
-  <div class="tags has-addons are-medium">
+  <div class="tags has-addons are-medium pt-3">
     <span class="tag">Nom d'utilisateur</span>
     <span class="tag is-link">{{ "@" + currentUser.username }}</span>
   </div>
